# src/main/java/br/com/powercards/dto/CardResponse.java
@@ -23,22 +23,23 @@ package br.com.powercards.dto;
  * @param customData            Custom data.
  */
 public record CardResponse(
-                Long id,
-                Long noteId,
-                Long deckId,
-                Integer ordinal,
-                Long modificationTimestamp,
-                Integer updateSequenceNumber,
-                Integer type,
-                Integer queue,
-                Long due,
-                Integer interval,
-                Integer easeFactor,
-                Integer repetitions,
-                Integer lapses,
-                Integer remainingSteps,
-                Long originalDue,
-                Long originalDeckId,
-                Integer flags,
-                String customData) {
+        Long id,
+        Long noteId,
+        Long deckId,
+        Integer ordinal,
+        Long modificationTimestamp,
+        Integer updateSequenceNumber,
+        Integer type,
+        Integer queue,
+        Long due,
+        Integer interval,
+        Integer easeFactor,
+        Integer repetitions,
+        Integer lapses,
+        Integer remainingSteps,
+        Long originalDue,
+        Long originalDeckId,
+        Integer flags,
+        String customData,
+        String noteField) {
 }
