# src/main/resources/openapi.yaml
@@ -50,6 +50,14 @@ paths:
           type: integer
           format: int32
           default: 20
+      - name: search
+        in: query
+        schema:
+          type: string
+      - name: sort
+        in: query
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -155,6 +163,14 @@ paths:
           type: integer
           format: int32
           default: 20
+      - name: search
+        in: query
+        schema:
+          type: string
+      - name: sort
+        in: query
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -354,6 +370,14 @@ paths:
           type: integer
           format: int32
           default: 20
+      - name: search
+        in: query
+        schema:
+          type: string
+      - name: sort
+        in: query
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -653,6 +677,8 @@ components:
           type: integer
           format: int32
         customData:
+          type: string
+        noteField:
           type: string
     DeckRequest:
       type: object
